smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-newline.smithy
// Syntax error at line 5, column 29: Expected a line break, but found IDENTIFIER('apply') | Model
$version: "2.0"
namespace com.foo

apply SomeShape @deprecated apply SomeShape @sensitive
